<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:widget="http://schemas.android.com/apk/res-auto"
    android:id="@+id/rl_root"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:background="@color/white"
        android:gravity="center"
        android:orientation="vertical">
        <TextView
            android:id="@+id/tv_kitchen_name" 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/summary"
            android:textSize="@dimen/text_size_xb"
            android:textColor="@color/black"/>
    </LinearLayout>
    
    <LinearLayout 
        android:id="@+id/ll_dish_names"
        android:layout_width="150dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_below="@+id/tv_title">
        
    <TextView
        android:id="@+id/tv_dish_names"
        android:layout_width="150dp"
        android:layout_height="30dp"
        android:text="@string/item"
        android:gravity="center"
        android:textSize="@dimen/text_size_b"
        android:textColor="@color/black"/>
    <ListView 
        android:id="@+id/lv_dish_names"
        android:layout_width="150dp"
        android:layout_height="match_parent"/> 
    </LinearLayout>
    
    <View
        android:id="@+id/view"
        android:layout_width="30dp"
        android:layout_height="match_parent"
        android:layout_below="@+id/tv_title"
        android:layout_toRightOf="@+id/ll_dish_names"/>
        
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_toRightOf="@+id/view"
        android:layout_below="@+id/tv_title"
        android:orientation="vertical">
    <LinearLayout
        android:id="@+id/ll_kot_record"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:orientation="horizontal">
        
        <TextView 
            android:layout_width="160dp"
            android:layout_height="30dp"
            android:gravity="center"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_m"
			android:text="@string/dish"/>
        
        <TextView 
            android:layout_width="80dp"
            android:layout_height="30dp"
            android:gravity="center"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_m"
			android:text="@string/pos_id"/>
        <TextView 
            android:layout_width="80dp"
            android:layout_height="30dp"
            android:gravity="center"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_m"
			android:text="@string/order_id"/>
        <TextView
            android:id="@+id/tv_table_name" 
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:gravity="center"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_m"
			android:text="@string/table"/>
        <TextView 
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:gravity="center"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_m"
			android:text="@string/pos"/>
        <TextView 
            android:layout_width="120dp"
            android:layout_height="30dp"
            android:gravity="center"
            android:textColor="@color/black" 
            android:textSize="@dimen/text_size_m"
			android:text="@string/data"/>
        <TextView 
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:gravity="center"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_m"
			android:text="@string/time"/>
        
    </LinearLayout>
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <ListView 
            android:id="@+id/lv_kot_details"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            
        </ListView>
    </LinearLayout>
    </LinearLayout>

</RelativeLayout>