<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/setting" 
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_xb"/>
    
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical">
    
    <TextView 
        android:id="@+id/tv_history"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/kot_history_"
        android:gravity="center"
        android:textSize="@dimen/text_size_b"
        android:textColor="@color/black"/>
    
    <TextView 
        android:id="@+id/tv_reset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/reset_kds"
        android:textSize="@dimen/text_size_b"
        android:textColor="@color/black"/>

    <TextView 
        android:id="@+id/tv_switch_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/switch_account"
        android:layout_marginTop="300dp"
        android:gravity="center"
        android:textSize="@dimen/text_size_b"
        android:textColor="@color/black"/>
    
    <TextView 
        android:id="@+id/tv_version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="@dimen/text_size_b"
        android:textColor="@color/black"/>
    
    </LinearLayout>
</LinearLayout>